# tiniMLVM

./: .gitignore  MLOps.drawio  data_generator.c  data_visualization.ipynb  federated_learning.ipynb  genann.c  genann.h  genann_times.c  hls_conversion.py  kind-config.yaml  memory.txt  mnist.h  mnist_genann.c  mnist_python.py  prova  python_times.csv  python_times.py  read.me  run.sh  run_data_generator.sh  run_drift_detection.py  run_experiments_mnist.sh  synthetic_python.py  testing_genann.c  train_and_convert.sh  wasm_edge_istructions.me
c_code/: genann.h  genann_times.c  genann_times.csv
c_code/tensorflow_lite_c/: CMakeLists.txt  run_tensorflow_lite.sh  tflite_times.c  tflite_times.csv
data_kind/: data.csv  drift_data.csv  model_regression.tflite  reference.csv  regression_model_tf.keras  regression_model_tf_prova.keras  regressiong_model_lite.tflite  sshkey_lserf  sshkey_lserf.pub  test.py  training_script_regression.py
dreaming_monkey/: best_model.keras  dreaming_ppo.py  multispire_model.py  pretrained_stgnn.pth  testing.ipynb  torch_test.ipynb  train_set_of_models.py  vibe_coding.py
drift_detection/: drift_detection_reg.c  drift_detection_reg.py  run_drift_detection_reg.sh
experiments/: MLapplication_build_time.py  ctrldrift.yaml  drift_detection_experiment.py  experiment_logs.csv  getting_drift_logs.py  phases_training_experiment.py  reading_data.ipynb
mnist_test/: data_gen.py  onnx_python_inftime_mnist_.csv  onnx_python_inftime_mnist_dense.csv  onnx_python_inftime_mnist_large.csv  onnx_python_inftime_mnist_small.csv  tflite_c_inftime_mnist.csv  (+12 more)
(+1375 files in other folders)
